feat: llm improvements to financial.yaml
- **Problem**: Case sensitivity in string comparisons for region names
- **Pattern**: Database stores 'east Bohemia', 'north Bohemia' (lowercase) but queries use 'East Bohemia', 'North Bohemia' (capitalized)
- **Issue**: String literal case sensitivity causing 0 results instead of expected counts

- **Problem**: Missing complex calculations and subqueries for comparative analysis
- **Pattern**: Questions requiring multiple joins with calculations between min/max values across tables
- **Issue**: Query only returns account_id without performing required gap calculations

1. Case sensitivity in region name comparisons - 2 failures
2. Complex calculation requirements - 1 failure

This database has fewer errors but they are significant - case sensitivity can cause major result discrepancies.

--- a/datasets/bird/catalogs/llm_improved/financial.yaml
+++ b/datasets/bird/catalogs/llm_improved/financial.yaml
@@ -48,9 +48,28 @@ columns:
 - name: gender
   description: Client's gender code (e.g., M or F).
 - name: birth_date
-  description: Date of birth of the client.
+  description: Date of birth for the client.
 - name: district_id
-  description: Identifier of the client's district, referencing district table.
+  description: Identifier of the district where the client resides, referencing district table.
+...
+---
+type: fact
+description: |
+  Region names in district.A3 field are stored in lowercase (e.g., 'east Bohemia', 'north Bohemia'). Always use lowercase in string comparisons.
+...
+---
+type: fact
+description: |
+  The frequency field uses Czech terms: 'POPLATEK PO OBRATU' means 'issuance after transaction', 'POPLATEK MESICNE' means 'monthly issuance'.
+...
+---
+type: sql_example
+sql: |
+  SELECT COUNT(*) 
+  FROM account a
+  JOIN district d ON a.district_id = d.district_id
+  WHERE d.A3 = 'east bohemia' AND a.frequency = 'POPLATEK PO OBRATU'
+description: Use lowercase for region names in A3 field. Be precise with Czech frequency terms.
 ...
 ---
 schema: public
